...
                                            key: _formKey,
                                            child: Column(
                                              mainAxisAlignment: MainAxisAlignment.center,
                                              children: <Widget>[
                                                SizedBox(height: 40,),
                                                TextFormField(
                                                  key: Key("Edit profile first name"),
                                                  onChanged: (val) {
                                                    setState(() {
                                                      new_firstName = val;
                                                    });
                                                  },
                                                  decoration: InputDecoration(
...
                                                          : null,
                                                ),
                                                SizedBox(
                                                  height: 10,
                                                ),
                                                TextFormField(
                                                  key: Key("Edit profile surname"),
                                                  onChanged: (val) {
                                                    setState(() {
                                                      new_surname = val;
                                                    });
                                                  },
                                                  decoration: InputDecoration(
...
                                                          : null,
                                                ),
                                                SizedBox(
                                                  height: 10,
                                                ),
                                                TextFormField(
                                                  key: Key("Edit profile age"),
                                                  onChanged: (val) {
                                                    setState(() {
                                                      new_age = val;
                                                    });
                                                  },
                                                  decoration: InputDecoration(
...
                                          style: TextStyle(color: Colors.red),
                                        ),
                                        SizedBox(
                                          height: 20,
                                        ),
                                        ElevatedButton(
                                          key: Key("Edit profile save button"),
                                            onPressed: () async {
                                              if (_formKey.currentState!
                                                  .validate()) {
                                                setState(() {
                                                  loading = true;
                                                });
...
