...
          builder: (context, setState) {
            return AlertDialog(
              backgroundColor: Colors.white,
              title: Text('Enter Password'),
              content: TextField(
                controller: textController,
                key: Key("Edit log in Enter password"),
                obscureText: true,
                decoration: InputDecoration(
                    hintText:
                    'Enter current password'),
              ),
              actions: [
...
      mainAxisAlignment: MainAxisAlignment.spaceEvenly,
      children: [
        Center(
          child: ElevatedButton(
            style: ElevatedButton.styleFrom(
                primary: Colors.deepPurpleAccent, elevation: 30),
            key: Key("Edit profile button"),
            onPressed: () {
              Navigator.push(
                  context,
                  MaterialPageRoute(
                      builder: (context) => editProfile(
                          email: widget.email,
...
          height: 10,
        ),
        Center(
          child: ElevatedButton(
            style: ElevatedButton.styleFrom(
                primary: Colors.deepPurpleAccent, elevation: 30),
            key: Key("Edit log in details button"),
            onPressed: () {
              widget.enterPassword().then((value) {
                setState(() {});
              });
            },
            child: OurText(
...
